--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -2,7 +2,10 @@ channels:
 - conda-forge
 dependencies:
 - ipykernel
+- myst-parser
 - nbsphinx
+- sphinx-gallery
+- sphinx-rtd-theme
 - ase =3.22.1
 - coveralls
 - coverage
@@ -10,7 +13,7 @@ dependencies:
 - matplotlib =3.8.2
 - numpy =1.26.2
 - pyiron_base =0.6.20
-- pyiron_atomistics =0.4.4
+- pyiron_atomistics =0.4.7
 - pyparsing =3.1.1
 - scipy =1.11.4
 - seaborn =0.13.1
