--- a/.ci_support/environment.yml
+++ b/.ci_support/environment.yml
@@ -9,6 +9,7 @@ dependencies:
 - numpy =1.26.4
 - pyiron_base =0.8.0
 - pyiron_atomistics =0.5.4
+- pyiron_snippets =0.1.0
 - pyparsing =3.1.2
 - scipy =1.12.0
 - seaborn =0.13.2
