--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -24,6 +24,7 @@ dependencies:
 - moto =5.0.8
 - pycp2k =0.2.2
 - aws-sam-translator =1.77.0
+- pymatgen =2024.5.1
 - pympipool =0.7.17
 - distributed =2024.5.1
 - h5io_browser =0.0.10
