--- a/.ci_support/environment.yml
+++ b/.ci_support/environment.yml
@@ -20,5 +20,6 @@ dependencies:
 - pycp2k =0.2.2
 - aws-sam-translator =1.77.0
 - distributed =2024.5.1
-- pympipool =0.8.0
 - h5io_browser =0.0.12
+- pymatgen =2024.5.1
+- pympipool =0.8.0
