--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,5 +7,5 @@ on:
 
 jobs:
   pyiron:
-    uses: pyiron/actions/.github/workflows/release.yml@actions-1.1.0b
+    uses: pyiron/actions/.github/workflows/release.yml@actions-3.2.1
     secrets: inherit
