--- a/.github/workflows/push-pull.yml
+++ b/.github/workflows/push-pull.yml
@@ -12,4 +12,4 @@ jobs:
     uses: pyiron/actions/.github/workflows/push-pull.yml@actions-3.2.1
     secrets: inherit
     with:
-      notebooks-env-files: ci_support/environment.yml .ci_support/environment-notebooks.yml
+      notebooks-env-files: .ci_support/environment-notebooks.yml
