--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -11,7 +11,7 @@ dependencies:
 - coveralls
 - coverage
 - codacy-coverage
-- matplotlib =3.8.3
+- matplotlib-base =3.9.1
 - numpy =1.26.4
 - pyiron_base =0.9.11
 - pyiron_atomistics =0.6.10
