--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -27,3 +27,6 @@ dependencies:
 - distributed =2024.7.1
 - h5io_browser =0.0.17
 - pymatgen =2024.7.18
+- cloudpickle =3.0.0
+- pyiron_workflow =0.10.0
+- h5io =0.2.4
